--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "amielantonio/worksnaps-sdk",
     "description": "Worksnaps SDK and samples for REST API",
-    "keywords" : "worksnaps, sdk, rest, time tracking",
+    "keywords" : ["worksnaps, sdk, rest, time tracking"],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -15,5 +15,10 @@
         "ext-curl": "*",
         "ext-json": "*",
         "psr/log": "^1.0.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "lib/"
+        }
     }
 }
